--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: grey;
+}
+
+header {
+  text-align: center;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+#details {
+  text-align: center;
 }
